# spi-emulator

./: .gitignore  .travis.yml  CMakeLists.txt
include/: array_iterator.h  common.h  dummy.h  iterator.h  type.h
script/: auto_merge.sh
src/: CMakeLists.txt  array_iterator.c  dummy.c  iterator.c
unit_test/: AllTests.cpp  AllTests.h  ArrayIteratorTests.cpp  CMakeLists.txt  Fakes.cpp  Fakes.h  IteratorTests.cpp  TestDummy.cpp
